# cli-vpn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ai-review.yml
include/: api_client.hpp  custom_relay_transport.hpp  direct_transport.hpp  network_monitor.hpp  os_router.hpp  ping_helper.hpp  process_mgr.hpp  transport.hpp
src/: main.cpp
src/api/: ping_helper.cpp  vpngate_client.cpp
src/system/windows/: network_monitor.cpp  os_router.cpp  process.cpp  router.cpp
src/transport/: custom_relay_transport.cpp
